# 2022summer

./: .gitignore  README.md
length_extension_sm3/: README.md  length_extension_sm3.c
sm2/: README.md  sm2.py
sm2PGP/: README.md  sm2_PGP.py
sm3/: CMakeLists.txt  README.md  cr.sh  main.c  openssl_sm3.c  opti_sm3.c  simple_sm3.c  sm3.h
sm3_birthday_attack/: README.md  naive_brithday_attack_sm3hash.cpp  sm3hash.cpp  sm3hash.h
sm3_pho_brithday_attack/: README.md
sm3_rho_brithday_attack/: README.md  rho_brithday_attack_sm3hash.cpp  sm3hash.cpp  sm3hash.h
